fixes #51 - cart alignment

--- a/css/vivid-store.css
+++ b/css/vivid-store.css
@@ -51,7 +51,7 @@
         .cart-page-cart-list li.cart-page-cart-list-item.striped {  }
             .cart-page-cart-list li.cart-page-cart-list-item > * { float: left; padding: 0 10px; -moz-box-sizing: border-box; box-sizing: border-box; }
             .cart-page-cart-list li.cart-page-cart-list-item .cart-item-label {  }            
-            .cart-page-cart-list li.cart-page-cart-list-item .cart-list-thumb { width: 30%; }
+            .cart-page-cart-list li.cart-page-cart-list-item .cart-list-thumb { width: 30%; min-height: 50px; }
             .cart-page-cart-list li.cart-page-cart-list-item .cart-list-product-name { width: 40%; font-weight: bold; }
             .cart-page-cart-list li.cart-page-cart-list-item .cart-list-item-price { width: 30%; text-align: right; }
             .cart-page-cart-list li.cart-page-cart-list-item .cart-list-product-qty { width: 35%; margin-top: 10px; }
